# istore-core

./: .env.example  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: docker-image.yml
migrations/2024-07-17-011139_initial_tables/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/controllers/: app.rs  category.rs  chat.rs  mod.rs  products.rs
src/models/: categories.rs  chats.rs  companies.rs  messages.rs  mod.rs  product_category.rs  products.rs  users.rs
src/services/: app.rs  category.rs  chat.rs  mod.rs
src/services/products/: create.rs  mod.rs  search.rs
src/utils/: db.rs  macros.rs  mod.rs  tools.rs
