[package]
name = "istore"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7"
actix-cors = "0.7"
diesel = { version = "2.1", features = [
    "postgres",
    "r2d2",
    "serde_json",
    "chrono",
] }
rust_decimal = { version = "1.35", features = ["db-diesel2-postgres"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
